# lite.ai.toolkit

lite/mnn/cv/: mnn_scrfd.cpp
python/: CMakeLists.txt  detection.cpp  detection.hpp  litesdk_api.cpp  litesdk_apo.hpp  litesdk_pybind11.cxx
